--- a/generators/ts-package/generator.omni.yaml
+++ b/generators/ts-package/generator.omni.yaml
@@ -7,6 +7,7 @@ prompts:
   - name: package_name
     type: text
     message: What is the name of your package?
+    default: "{{ output_dir | base_name }}"
     validate:
       - condition: "{{ value | length > 0 }}"
         error_message: Package name must not be empty
@@ -17,6 +18,7 @@ prompts:
 
   - name: package_type
     type: select
+    remember: true
     message: What type of package is this?
     options:
       - name: Library
