--- a/crates/omni_collector/Cargo.toml
+++ b/crates/omni_collector/Cargo.toml
@@ -25,3 +25,4 @@ omni_utils = { workspace = true }
 derive-new = { workspace = true }
 maps = { workspace = true }
 bs58 = { workspace = true }
+serde_json = { workspace = true }
