--- a/crates/omni_task_context/Cargo.toml
+++ b/crates/omni_task_context/Cargo.toml
@@ -25,3 +25,4 @@ omni_types = { workspace = true }
 omni_hasher = { workspace = true }
 omni_tera = { workspace = true }
 omni_configurations = { workspace = true }
+serde_json = { workspace = true }
