--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
     "version": "0.9.3",
     "dependencies": {
         "@omni-oss/biome-config": "workspace:^",
-        "@omni-oss/tsconfig": "workspace:^",
-        "@biomejs/biome": "^2.3.14",
+        "@omni-oss/tsconfig": "catalog:",
+        "@biomejs/biome": "^2.4.2",
         "@omni-oss/summarize-results": "workspace:^",
         "@omni-oss/set-version": "workspace:^",
         "@omni-oss/create-jobs": "workspace:^",
         "@microsoft/api-extractor": "^7.56.3",
-        "vite": "^7.3.1",
-        "vitest": "^4.0.18",
-        "typescript": "^5.9.3"
+        "vite": "catalog:",
+        "vitest": "catalog:",
+        "typescript": "catalog:"
     },
-    "packageManager": "bun@1.3.8",
+    "packageManager": "bun@1.3.9",
     "workspaces": [
         "packages/*",
         "scripts/*",
@@ -21,5 +21,22 @@
         "services/*",
         "tests/*",
         ".github/actions/*"
-    ]
+    ],
+    "catalog": {
+        "@omni-oss/channels": "workspace:^",
+        "@omni-oss/tsconfig": "workspace:^",
+        "@omni-oss/vite-config": "workspace:^",
+        "@omni-oss/vitest-config": "workspace:^",
+        "@types/bun": "^1.3.9",
+        "@types/node": "25.2.3",
+        "@types/deno": "2.5.0",
+        "commander": "^14.0.3",
+        "typescript": "^5.9.3",
+        "unplugin-dts": "^1.0.0-beta.6",
+        "vite": "^7.3.1",
+        "vite-tsconfig-paths": "^6.1.1",
+        "vitest": "^4.0.18",
+        "zod": "^4.3.6",
+        "@commander-js/extra-typings": "^14.0.0"
+    }
 }
