--- a/packages/bridge-rpc-router/package.json
+++ b/packages/bridge-rpc-router/package.json
@@ -1,33 +1,33 @@
 {
-    "name": "@omni-oss/bridge-rpc-router",
-    "version": "0.1.0",
-    "exports": {
-        ".": {
-            "types": "./dist/index.d.ts",
-            "import": {
-                "development": "./src/index.ts",
-                "default": "./dist/index.mjs"
-            },
-            "require": {
-                "development": "./src/index.ts",
-                "default": "./dist/index.cjs"
-            }
-        }
-    },
-    "dependencies": {
-        "@omni-oss/channels": "workspace:^",
-        "@omni-oss/bridge-rpc": "workspace:^"
-    },
-    "publishConfig": {
-        "access": "public"
-    },
-    "devDependencies": {
-        "@omni-oss/tsconfig": "workspace:^",
-        "@omni-oss/vite-config": "workspace:^",
-        "@omni-oss/vitest-config": "workspace:^",
-        "vite": "^7.3.1",
-        "vitest": "^4.0.18",
-        "typescript": "^5.9.3",
-        "@types/node": "25.2.2"
+  "name": "@omni-oss/bridge-rpc-router",
+  "version": "0.1.0",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": {
+        "development": "./src/index.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "development": "./src/index.ts",
+        "default": "./dist/index.cjs"
+      }
     }
+  },
+  "dependencies": {
+    "@omni-oss/channels": "catalog:",
+    "@omni-oss/bridge-rpc": "workspace:^"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "@omni-oss/tsconfig": "catalog:",
+    "@omni-oss/vite-config": "catalog:",
+    "@omni-oss/vitest-config": "catalog:",
+    "vite": "catalog:",
+    "vitest": "catalog:",
+    "typescript": "catalog:",
+    "@types/node": "catalog:"
+  }
 }
