--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -1,69 +1,69 @@
 {
-    "name": "@omni-oss/bridge-rpc",
-    "version": "0.1.1",
-    "exports": {
-        ".": {
-            "types": "./dist/index.d.ts",
-            "import": {
-                "development": "./src/index.ts",
-                "default": "./dist/index.mjs"
-            },
-            "require": {
-                "development": "./src/index.ts",
-                "default": "./dist/index.cjs"
-            }
-        },
-        "./frame": {
-            "types": "./dist/bridge/frame.d.ts",
-            "import": {
-                "development": "./src/bridge/frame.ts",
-                "default": "./dist/frame.mjs"
-            },
-            "require": {
-                "development": "./src/bridge/frame.ts",
-                "default": "./dist/frame.cjs"
-            }
-        },
-        "./client": {
-            "types": "./dist/bridge/client/index.d.ts",
-            "import": {
-                "development": "./src/bridge/client/index.ts",
-                "default": "./dist/client.mjs"
-            },
-            "require": {
-                "development": "./src/bridge/client/index.ts",
-                "default": "./dist/client.cjs"
-            }
-        },
-        "./server": {
-            "types": "./dist/bridge/server/index.d.ts",
-            "import": {
-                "development": "./src/bridge/server/index.ts",
-                "default": "./dist/server.mjs"
-            },
-            "require": {
-                "development": "./src/bridge/server/index.ts",
-                "default": "./dist/server.cjs"
-            }
-        }
+  "name": "@omni-oss/bridge-rpc",
+  "version": "0.1.1",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": {
+        "development": "./src/index.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "development": "./src/index.ts",
+        "default": "./dist/index.cjs"
+      }
     },
-    "dependencies": {
-        "@omni-oss/async-utils": "workspace:^",
-        "@omni-oss/channels": "workspace:^",
-        "@msgpack/msgpack": "^3.1.3",
-        "zod": "^4.3.6",
-        "async-mutex": "^0.5.0"
+    "./frame": {
+      "types": "./dist/bridge/frame.d.ts",
+      "import": {
+        "development": "./src/bridge/frame.ts",
+        "default": "./dist/frame.mjs"
+      },
+      "require": {
+        "development": "./src/bridge/frame.ts",
+        "default": "./dist/frame.cjs"
+      }
     },
-    "publishConfig": {
-        "access": "public"
+    "./client": {
+      "types": "./dist/bridge/client/index.d.ts",
+      "import": {
+        "development": "./src/bridge/client/index.ts",
+        "default": "./dist/client.mjs"
+      },
+      "require": {
+        "development": "./src/bridge/client/index.ts",
+        "default": "./dist/client.cjs"
+      }
     },
-    "devDependencies": {
-        "@omni-oss/tsconfig": "workspace:^",
-        "@omni-oss/vite-config": "workspace:^",
-        "@omni-oss/vitest-config": "workspace:^",
-        "vite": "^7.3.1",
-        "vitest": "^4.0.18",
-        "typescript": "^5.9.3",
-        "@types/node": "25.2.2"
+    "./server": {
+      "types": "./dist/bridge/server/index.d.ts",
+      "import": {
+        "development": "./src/bridge/server/index.ts",
+        "default": "./dist/server.mjs"
+      },
+      "require": {
+        "development": "./src/bridge/server/index.ts",
+        "default": "./dist/server.cjs"
+      }
     }
+  },
+  "dependencies": {
+    "@omni-oss/async-utils": "workspace:^",
+    "@omni-oss/channels": "catalog:",
+    "@msgpack/msgpack": "^3.1.3",
+    "zod": "catalog:",
+    "async-mutex": "^0.5.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "@omni-oss/tsconfig": "catalog:",
+    "@omni-oss/vite-config": "catalog:",
+    "@omni-oss/vitest-config": "catalog:",
+    "vite": "catalog:",
+    "vitest": "catalog:",
+    "typescript": "catalog:",
+    "@types/node": "catalog:"
+  }
 }
