--- a/packages/vitest-config/package.json
+++ b/packages/vitest-config/package.json
@@ -1,24 +1,24 @@
 {
-    "name": "@omni-oss/vitest-config",
-    "type": "module",
-    "version": "0.0.0",
-    "exports": {
-        "./*": {
-            "import": "./src/*.ts",
-            "require": "./src/*.ts"
-        }
-    },
-    "peerDependencies": {
-        "vite": "^7.3.1",
-        "vitest": "^4.0.18"
-    },
-    "publishConfig": {
-        "access": "public"
-    },
-    "devDependencies": {
-        "unplugin-dts": "^1.0.0-beta.6",
-        "vite-tsconfig-paths": "^6.1.0",
-        "@omni-oss/tsconfig": "workspace:^",
-        "@omni-oss/vite-config": "workspace:^"
+  "name": "@omni-oss/vitest-config",
+  "type": "module",
+  "version": "0.0.0",
+  "exports": {
+    "./*": {
+      "import": "./src/*.ts",
+      "require": "./src/*.ts"
     }
+  },
+  "peerDependencies": {
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "unplugin-dts": "catalog:",
+    "vite-tsconfig-paths": "catalog:",
+    "@omni-oss/tsconfig": "catalog:",
+    "@omni-oss/vite-config": "catalog:"
+  }
 }
