--- a/scripts/create-jobs/package.json
+++ b/scripts/create-jobs/package.json
@@ -19,16 +19,16 @@
         }
     },
     "dependencies": {
-        "zod": "^4.3.6",
-        "commander": "^14.0.3",
-        "@commander-js/extra-typings": "14.0.0"
+        "zod": "catalog:",
+        "commander": "catalog:",
+        "@commander-js/extra-typings": "catalog:"
     },
     "devDependencies": {
-        "@omni-oss/tsconfig": "workspace:^",
-        "@omni-oss/vite-config": "workspace:^",
-        "@omni-oss/vitest-config": "workspace:^",
-        "typescript": "^5.9.3",
-        "@types/node": "25.2.2",
-        "@types/bun": "^1.3.8"
+        "@omni-oss/tsconfig": "catalog:",
+        "@omni-oss/vite-config": "catalog:",
+        "@omni-oss/vitest-config": "catalog:",
+        "typescript": "catalog:",
+        "@types/node": "catalog:",
+        "@types/bun": "catalog:"
     }
 }
