--- a/scripts/set-version/package.json
+++ b/scripts/set-version/package.json
@@ -20,25 +20,25 @@
         }
     },
     "dependencies": {
-        "zod": "^4.3.6",
-        "commander": "^14.0.3",
-        "@commander-js/extra-typings": "14.0.0",
+        "zod": "catalog:",
+        "commander": "catalog:",
+        "@commander-js/extra-typings": "catalog:",
         "@omni-oss/system-interface": "workspace:^",
-        "fast-xml-parser": "^5.3.4",
+        "fast-xml-parser": "^5.3.6",
         "yaml": "^2.8.2",
         "comment-json": "^4.5.1",
         "smol-toml": "^1.6.0",
         "picomatch": "^4.0.3"
     },
     "devDependencies": {
-        "@omni-oss/tsconfig": "workspace:^",
-        "@omni-oss/vite-config": "workspace:^",
-        "@omni-oss/vitest-config": "workspace:^",
-        "vite": "^7.3.1",
-        "vitest": "^4.0.18",
-        "@types/node": "25.2.2",
-        "@types/bun": "^1.3.8",
+        "@omni-oss/tsconfig": "catalog:",
+        "@omni-oss/vite-config": "catalog:",
+        "@omni-oss/vitest-config": "catalog:",
+        "vite": "catalog:",
+        "vitest": "catalog:",
+        "@types/node": "catalog:",
+        "@types/bun": "catalog:",
         "@types/picomatch": "^4.0.2",
-        "typescript": "^5.9.3"
+        "typescript": "catalog:"
     }
 }
