--- a/scripts/summarize-results/package.json
+++ b/scripts/summarize-results/package.json
@@ -9,12 +9,12 @@
         ".": "./src/lib.ts"
     },
     "devDependencies": {
-        "@omni-oss/tsconfig": "workspace:^",
-        "typescript": "^5.9.3",
-        "@types/node": "25.2.2",
-        "@types/bun": "^1.3.8",
-        "zod": "^4.3.6",
-        "commander": "^14.0.3",
-        "@commander-js/extra-typings": "14.0.0"
+        "@omni-oss/tsconfig": "catalog:",
+        "typescript": "catalog:",
+        "@types/node": "catalog:",
+        "@types/bun": "catalog:",
+        "zod": "catalog:",
+        "commander": "catalog:",
+        "@commander-js/extra-typings": "catalog:"
     }
 }
